--- a/e-commerce-frontend/src/app/app.component.html
+++ b/e-commerce-frontend/src/app/app.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+<div class="container">
+    <header>
+        <h1>{{title}}</h1>
+        <app-nav></app-nav>
+    </header>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+    <!--
+    <aside>
+    </aside>
+    -->
+    <footer>
+        Am4z0n(&#169; 2022)
+    </footer>
+</div>
