--- a/e-commerce-frontend/src/app/nav/nav.component.html
+++ b/e-commerce-frontend/src/app/nav/nav.component.html
@@ -1,1 +1,8 @@
-<p>nav works!</p>
+<nav>
+    <ul>
+        <li><a routerLink="/home">Home</a></li>
+        <li><a routerLink="product/catalog">Catalog</a></li>
+        <li><a routerLink="/login">Login</a></li>
+    </ul>
+</nav>
+
