Go back after login

--- a/e-commerce-frontend/src/app/login/login.component.html
+++ b/e-commerce-frontend/src/app/login/login.component.html
@@ -18,7 +18,7 @@
           <br>
           <br>
           <p-button type="submit" label="Login" class="p-button-success"></p-button>
-          <p-button type="button"  label="Register" icon="pi pi-plus"  [routerLink]="['../accounts/insert']" ></p-button>
+          <p-button type="button"  label="Register" icon="pi pi-plus"  [routerLink]="['../account/register']" ></p-button>
         
       </form>
     </body>
