--- a/e-commerce-frontend/src/app/account-register/account-register.component.html
+++ b/e-commerce-frontend/src/app/account-register/account-register.component.html
@@ -1,10 +1,7 @@
 <body>
-    <h2>Insert new Account</h2>
+    <h2>Register</h2>
     
-    <p-button type="button"  label="Home" icon="pi pi-home"  [routerLink]="['../../home']" ></p-button>
-    <br>
     <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-      <br>
         <div class="p-float-label">
             <input pInputText  id="email" type="text" formControlName="email" required minlength="3" maxlength="50">
             <label for="email">Email</label>
@@ -13,13 +10,13 @@
           <br>
           <div class="p-float-label">
             
-            <input pInputText id="firstname" type="text" formControlName="firstname" required minlength="3" maxlength="50">
+            <input pInputText id="firstname" type="text" formControlName="firstName" required minlength="3" maxlength="50">
             <label for="firstname" icon="pi pi-at">FirstName</label>
           </div>
           <br>
           <div class="p-float-label">
             
-            <input pInputText id="lastname" type="text" formControlName="lastname" required minlength="3" maxlength="50">
+            <input pInputText id="lastname" type="text" formControlName="lastName" required minlength="3" maxlength="50">
             <label for="lastname" icon="pi pi-at">LastName</label>
           </div>
           <br>
@@ -31,7 +28,7 @@
           <br>
           <div class="p-float-label">
             
-            <p-calendar id="birthday" formControlName="birthday"></p-calendar>
+            <p-calendar id="birthday" formControlName="birthday" dateFormat="yy-mm-dd"></p-calendar>
             <label for="birthday">Birthday</label>
           </div>
           
