--- a/e-commerce-frontend/src/app/nav/nav.component.css
+++ b/e-commerce-frontend/src/app/nav/nav.component.css
@@ -4,8 +4,9 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    background-color: #333;
+    
+   /* overflow: hidden;*/
+    
   }
   
   li {
@@ -18,6 +19,7 @@ ul {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    background-color: #333;
   }
   
   li a:hover {
