--- a/e-commerce-frontend/src/app/nav/nav.component.html
+++ b/e-commerce-frontend/src/app/nav/nav.component.html
@@ -2,7 +2,8 @@
     <ul>
         <li><a routerLink="/home">Home</a></li>
         <li><a routerLink="product/catalog">Catalog</a></li>
-        <li><a routerLink="/login">Login</a></li>
+        <li ><a  routerLink="/login">Login</a></li>
+        <li><p-menubar [model]="items"></p-menubar></li>
     </ul>
 </nav>
 
