--- a/e-commerce-frontend/src/app/account-modify/account-modify.component.html
+++ b/e-commerce-frontend/src/app/account-modify/account-modify.component.html
@@ -1,1 +1,44 @@
-<p>account-modify works!</p>
+<body>
+    <h2>Edit Account</h2>
+
+    <br>
+    <form class="form" [formGroup]="editForm" (ngSubmit)="onSubmit()">
+      <br>
+        <div class="p-float-label">
+            <input pInputText  id="email" type="text" formControlName="email" required minlength="3" maxlength="50">
+            <label for="email" icon="pi pi-at">Email</label>
+          
+          </div>
+          <br>
+          <div class="p-float-label">
+            
+            <input pInputText id="firstname" type="text" formControlName="firstName" required minlength="3" maxlength="50">
+            <label for="firstname" icon="pi pi-at">FirstName</label>
+          </div>
+          <br>
+          <div class="p-float-label">
+            
+            <input pInputText id="lastname" type="text" formControlName="lastName" required minlength="3" maxlength="50">
+            <label for="lastname" icon="pi pi-at">LastName</label>
+          </div>
+          <br>
+          <div class="p-float-label">
+            
+            <input pPassword type="password" weakLabel="Weak :(" mediumLabel="Medium :|" strongLabel="Strong :)" toggleMask:true id="password" type="password" formControlName="password" maxlength="50">
+            <label for="password">New Password</label>
+          </div>
+          <br>
+
+          <div class="p-float-label">
+            
+            <input pInputText id="birthday" type="date" formControlName="birthday">
+            <label for="birthday" icon="pi pi-at">Birthday</label>
+          </div>
+          
+          <br>
+          <p-button type="submit" label="Save" [disabled]='!editForm.valid' class="p-button-success"></p-button>
+        
+      
+      </form>
+    
+    </body>
