--- a/e-commerce-frontend/src/app/product-detail/product-detail.component.html
+++ b/e-commerce-frontend/src/app/product-detail/product-detail.component.html
@@ -1,1 +1,24 @@
-<p>product-detail works!</p>
+<body *ngIf="product">
+    <br>
+    <br>  
+    <table ptable class="styled-table">
+        <tr>
+            <td>ID:</td>
+            <td>{{product.id}}</td>
+        </tr>
+        <tr>
+            <td>Name:</td>
+            <td>{{product.name}}</td>
+        </tr>
+        <tr>
+            <td>Price:</td>
+            <td>{{product.price | currency: 'USD'}}</td>
+        </tr>
+        <tr>
+            <td>Description:</td>
+            <td>{{product.description}}</td>
+        </tr>
+        
+    </table>
+    
+    </body>
