fixed catalog pagination

--- a/e-commerce-frontend/src/app/catalog/catalog.component.html
+++ b/e-commerce-frontend/src/app/catalog/catalog.component.html
@@ -10,7 +10,7 @@
                         [style]="{'margin-top':'15px'}">
                     </p-selectButton>
                     <button pButton pRipple type="button" icon="pi pi-search" class="p-button-rounded p-button-success"
-                        [style]="{'margin-top':'15px'}" (click)="getFilteredCatalog()"></button>
+                        [style]="{'margin-top':'15px'}" (click)="getFilteredCatalog(rangeValues[0], rangeValues[1])"></button>
                 </div>
             </div>
         </ng-template>
