--- a/e-commerce-frontend/src/app/product-add/product-add.component.html
+++ b/e-commerce-frontend/src/app/product-add/product-add.component.html
@@ -1,1 +1,31 @@
-<p>product-add works!</p>
+<div class="center">
+    <form class="form" [formGroup]="addProductForm" (ngSubmit)="onSubmit()">
+        <h3>Add a new product</h3>
+        <div class="grid p-fluid" [style]="{'width':'25%'}">
+            <div class="col-12 md:col-4">
+                <div class="p-inputgroup">
+                    <span class="p-inputgroup-addon">Name</span>
+                    <input type="text" pInputText placeholder="Name" minlength="1" formControlName="name">
+                </div>
+            </div>
+
+            <div class="col-12 md:col-4">
+                <div class="p-inputgroup">
+                    <span class="p-inputgroup-addon">Price</span>
+                    <input type="number" min="0.01" step="1" pInputText placeholder="Price" formControlName="price">
+                    <span class="p-inputgroup-addon">$</span>
+                </div>
+            </div>
+
+            <div class="col-12 md:col-4">
+                <div class="p-inputgroup">
+                    <span class="p-inputgroup-addon">Description</span>
+                    <textarea [rows]="5" [cols]="30" pInputTextarea [autoResize]="true" formControlName="description"></textarea>
+                </div>
+            </div>
+        </div>
+
+        <p-button type="submit" label="Add" icon="pi pi-check" iconPos="right" [style]="{'margin-top':'15px'}">
+        </p-button>
+    </form>
+</div>
