accounts pagination fixed

--- a/e-commerce-frontend/src/app/catalog/catalog.component.html
+++ b/e-commerce-frontend/src/app/catalog/catalog.component.html
@@ -43,7 +43,8 @@
                     </button>
                 </td>
                 <td>
-                    <button pButton pRipple type="button" class="p-button-rounded p-button-success">
+                    <button pButton pRipple type="button" class="p-button-rounded p-button-success" 
+                    (onClick)="addToCart(product.id)">
                         <i class="pi pi-shopping-cart"></i>
                     </button>
                 </td>
