--- a/e-commerce-frontend/src/app/accounts-list/accounts-list.component.html
+++ b/e-commerce-frontend/src/app/accounts-list/accounts-list.component.html
@@ -1,5 +1,8 @@
 <div class="center">
-    <p-table [style]="{'width':'85%'}" [value]="accounts" responsiveLayout="scroll">
+    <p-table [style]="{'width':'85%'}" [value]="accounts" responsiveLayout="scroll"
+     [paginator]="true" [rows]=rows [showCurrentPageReport]="true"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" 
+        [rowsPerPageOptions]="[5,10,25,50]" [totalRecords]="totAccounts">
         <ng-template pTemplate="header">
             <tr>
                 
@@ -33,13 +36,6 @@
             </tr>
         </ng-template>
         <ng-template pTemplate="summary">
-            <div class="flex align-items-center justify-content-between">
-                In total there {{totAccounts != 1 ? "are" : "is"}} {{totAccounts}}
-                {{totAccounts != 1? "accounts.": "account."}}
-
-            </div>
         </ng-template>
     </p-table>
-    <p-paginator [rows]=rows [totalRecords]=7 [rowsPerPageOptions]="[5,10,20,30]"
-        (onPageChange)="paginate($event)"></p-paginator>
 </div>
