some layout changes

--- a/e-commerce-frontend/src/app/accounts-list/accounts-list.component.html
+++ b/e-commerce-frontend/src/app/accounts-list/accounts-list.component.html
@@ -1,7 +1,7 @@
 <div class="center">
     <p-table [style]="{'width':'85%'}" [value]="accounts" responsiveLayout="scroll"
      [paginator]="true" [rows]=rows [showCurrentPageReport]="true"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" 
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} accounts" 
         [rowsPerPageOptions]="[5,10,25,50]" [totalRecords]="totAccounts">
         <ng-template pTemplate="header">
             <tr>
