--- a/e-commerce-frontend/src/app/catalog/catalog.component.html
+++ b/e-commerce-frontend/src/app/catalog/catalog.component.html
@@ -37,21 +37,18 @@
                 <td>{{product.price | currency:'USD'}}</td>
                 <td>{{product.description}}</td>
                 <td>
-                    <button pButton pRipple type="button" routerLink="/product/detail/{{product.id}}"
+                    <button pButton pRipple type="button" icon = "pi pi-info" routerLink="/product/detail/{{product.id}}"
                      class="p-button-rounded p-button-info">
-                        <i class="pi pi-info"></i>
                     </button>
                 </td>
                 <td>
-                    <button pButton pRipple type="button" class="p-button-rounded p-button-success" 
+                    <button pButton pRipple type="button" [style]="{'margin-left':'-15px'}" icon = "pi pi-shopping-cart" class="p-button-rounded p-button-success" 
                     (onClick)="addToCart(product.id)">
-                        <i class="pi pi-shopping-cart"></i>
                     </button>
                 </td>
                 <td *ngIf="isAdmin">
-                    <button pButton pRipple type="button" class="p-button-rounded p-button-warning"
-                        routerLink="/product/modify/{{product.id}}"><i class="pi pi-pencil"></i>
-                    </button>
+                    <button pButton pRipple type="button" [style]="{'margin-left':'-15px'}" icon = "pi pi-pencil" class="p-button-rounded p-button-warning"
+                        routerLink="/product/modify/{{product.id}}"></button>
                 </td>
             </tr>
         </ng-template>
