added some cart functionalities, to be completed

--- a/e-commerce-frontend/src/app/cart/cart.component.html
+++ b/e-commerce-frontend/src/app/cart/cart.component.html
@@ -1,1 +1,45 @@
-<p>cart works!</p>
+<div class="center">
+    <p-table [style]="{'width':'85%'}" [value]="cartList" responsiveLayout="scroll"
+    [paginator]="true" [rows]=rows [showCurrentPageReport]="true"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} cart items" 
+        [rowsPerPageOptions]="[5,10,25,50]" [totalRecords]="totItems">
+        <ng-template pTemplate="caption">
+            <div class="flex align-items-center justify-content-between">
+                Products in your cart
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Name</th>
+                <th>Image</th>
+                <th>Description</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th id="detail"></th>
+                <th id="removeFromCart"></th>
+                
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-cart>
+            <tr>
+  
+                <td>{{cart.product.name}}</td>
+                <td><img [src]="'assets/images/' + cart.product.id + format" width="100" class="shadow-4" /></td>
+                <td>{{cart.product.description}}</td>
+                <td>{{cart.product.price | currency:'USD'}}</td>
+                <td>{{cart.qty}}</td>
+                <td>
+                    <button pButton pRipple type="button" icon = "pi pi-info" routerLink="/product/detail/{{cart.product.id}}"
+                     class="p-button-rounded p-button-info">
+                    </button>
+                </td>
+                <td>
+                    <button pButton pRipple type="button" [style]="{'margin-left':'-25px'}" 
+                    icon = "pi pi-shopping-cart" class="p-button-rounded p-button-success" 
+                    (click)="removeFromCart(cart.product.id)">
+                    </button>
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
