--- a/e-commerce-frontend/src/app/receipt/receipt.component.html
+++ b/e-commerce-frontend/src/app/receipt/receipt.component.html
@@ -14,6 +14,6 @@
         </tr>
     </table>
    
-    <h3>Total: {{total | currency: 'USD' }}</h3>
-    <h3>Purchase date: {{orders[0].orderDate | date: 'medium'}}</h3>
+    <h4 id ="total">Total: {{total | currency: 'USD' }}</h4>
+    <h4>Purchase date: {{orders[0].orderDate | date: 'medium'}}</h4>
     </body>
