--- a/e-commerce-frontend/src/app/comment-add/comment-add.component.html
+++ b/e-commerce-frontend/src/app/comment-add/comment-add.component.html
@@ -1,8 +1,8 @@
 <h4>Add a Review</h4>
 
 <textarea pInputTextarea [(ngModel)]="text"  ></textarea>
-
-<button pButton pRipple type="button" [style]="{'margin-left':'-15px'}" label = "Add review" icon = "pi pi-check" class="p-button-rounded p-button-success" 
+<br>
+<button pButton pRipple type="button"  label = "Add review" icon = "pi pi-check" class="p-button-rounded p-button-success" 
                     (click)="addReview()">
                     </button>
 
