--- a/e-commerce-frontend/src/app/catalog/catalog.component.html
+++ b/e-commerce-frontend/src/app/catalog/catalog.component.html
@@ -1,4 +1,5 @@
 <div class="center">
+    <p-toast position="bottom-center" key="bc"></p-toast>
     <p-table [style]="{'width':'85%'}" [value]="catalog" responsiveLayout="scroll">
         <ng-template pTemplate="caption">
             <div class="flex align-items-center justify-content-between">
