--- a/e-commerce-frontend/src/app/login/login.component.html
+++ b/e-commerce-frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<body>
+<body class="p-grid p-nogutter p-d-flex p-justify-center p-ai-center">
     <h2>Login</h2>
     
     <form class="form" [formGroup]="loginForm" (ngSubmit)="onLogin()">
