--- a/e-commerce-frontend/src/app/cart/cart.component.html
+++ b/e-commerce-frontend/src/app/cart/cart.component.html
@@ -48,5 +48,7 @@
     <p-confirmDialog [style]="{width: '50vw'}" 
     [baseZIndex]="10000" rejectButtonStyleClass="p-button-text" key="buy"></p-confirmDialog>
     <p-button (click)="confirm()" icon="pi pi-check" label="Buy" styleClass="mr-2"></p-button>
-    <p-toast key ="buy"></p-toast>
+    <button pButton type="button" [style]="{'margin-left':'10px'}" icon="pi pi-times" label="Empty" 
+    class="p-button-danger" (click)="emptyCart()"></button>
+    <p-toast></p-toast>
 </div>
