--- a/e-commerce-frontend/src/app/product-detail/product-detail.component.html
+++ b/e-commerce-frontend/src/app/product-detail/product-detail.component.html
@@ -1,29 +1,29 @@
 <div style="float:left;" *ngIf="product">
-<body >
-    <br>
-    <br>  
-    <table ptable class="styled-table">
-        <tr>
-            <td>ID:</td>
-            <td>{{product.id}}</td>
-        </tr>
-        <tr>
-            <td>Name:</td>
-            <td>{{product.name}}</td>
-        </tr>
-        <tr>
-            <td>Description:</td>
-            <td>{{product.description}}</td>
-        </tr>
-        <tr>
-            <td>Price:</td>
-            <td>{{product.price | currency: 'USD'}}</td>
-        </tr>
-    </table>
-    
-    <app-comment-add></app-comment-add>
-    <app-comments-list></app-comments-list>
-    </body>
 
-<div style="float:center;"><img [src]="'assets/images/' + product.id+ format" width="300" class="shadow-4" /></div>
+    <body>
+        <br>
+        <br>
+        <table ptable class="styled-table">
+            <tr>
+                <td>ID:</td>
+                <td>{{product.id}}</td>
+            </tr>
+            <tr>
+                <td>Name:</td>
+                <td>{{product.name}}</td>
+            </tr>
+            <tr>
+                <td>Description:</td>
+                <td>{{product.description}}</td>
+            </tr>
+            <tr>
+                <td>Price:</td>
+                <td>{{product.price | currency: 'USD'}}</td>
+            </tr>
+        </table>
+        <app-comment-add></app-comment-add>
+        <app-comments-list></app-comments-list>
+    </body>
 </div>
+
+<div *ngIf="product" style="float:center;"><img [src]="'assets/images/' + product.id+ format" width="300" class="shadow-4" /></div>
